Correcao de referencia na Introducao

--- a/Dissertacao_Marcelo_Goncalves/capitulos/introducao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/introducao.tex
@@ -104,7 +104,7 @@ foram desenvolvidas e se organizam em duas categorias: preditiva \cite{cloudharm
 malkowski2010cloudxplor, fittkau2012cdosim, li2011cloudprophet} e empírica 
 \cite{jayasinghe2012, silva2013cloudbench, cunhacloud, scheuner2014cloud}.
 Normalmente baseadas em simuladores, estas abordagens apresentam uma baixa
-eficiência \cite{XXXXXXXXXXXXXX} com relação a sua capacidade de prever as
+eficiência \cite{fittkau2012cdosim} com relação a sua capacidade de prever as
 melhores configurações dos recursos da nuvem para variadas cargas impostas na 
 aplicação. Isto se deve normalmente a fatores como: diferenças conceituais entre 
 o modelo de simulação e o modelo real de comportamento da aplicação e instabilidade 
